--- a/env.example
+++ b/env.example
@@ -6,10 +6,10 @@ NEXT_PUBLIC_SUPABASE_URL=your_supabase_project_url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
 SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 
-# OpenAI Configuration
-OPENAI_API_KEY=your_openai_api_key
-CHAT_MODEL=gpt-4o-mini
-EMBEDDING_MODEL=text-embedding-3-small
+# Google AI Configuration
+GOOGLE_AI_API_KEY=your_google_ai_api_key
+CHAT_MODEL=gemini-1.5-flash
+EMBEDDING_MODEL=text-embedding-004
 
 # Next.js Configuration
 NEXTAUTH_URL=http://localhost:3000
