--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@google-ai/generativelanguage": "^3.4.1",
     "@google/generative-ai": "^0.24.1",
-    "@langchain/community": "^0.3.57",
-    "@langchain/openai": "^0.6.16",
+    "@langchain/google-genai": "^0.1.0",
     "@langchain/textsplitters": "^0.1.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -20,19 +18,14 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
-    "@supabase/auth-ui-react": "^0.4.7",
-    "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.75.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "langchain": "^0.3.36",
     "lucide-react": "^0.545.0",
     "mammoth": "^1.11.0",
     "next": "15.5.5",
     "next-themes": "^0.4.6",
-    "openai": "^6.3.0",
     "pdf-parse": "^2.3.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
