Fix all ESLint errors and build issues
- Fix TypeScript errors: replace 'any' types with proper types
- Fix React Hook dependencies: add useCallback and proper dependencies
- Fix empty interface errors: add className properties to UI components
- Fix unused variables and parameters
- Update API routes for Next.js 15 compatibility (async params)
- Fix Tailwind config for v4 compatibility
- Add fallback values for environment variables to enable builds
- Add deployment guide and documentation

All ESLint errors resolved, build now passes successfully.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@langchain/core": "^0.3.78",
     "@langchain/google-genai": "^0.1.0",
     "@langchain/textsplitters": "^0.1.0",
     "@radix-ui/react-dialog": "^1.1.15",
